# xy3d_wolff

./: README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: demo.py  run_xy3d_basic.py
src/apc524_spin/: imports.py  lattice.py
src/xy3d_wolff/: __init__.py  analysis.py  core.py  plotting.py  simulation.py  wolff.py
tests/: Wolff_update.py  test_simulation.py
