[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "APC524_spin"
version = "0.1.0"
description = "3D XY model Monte Carlo using Wolff cluster updates with improved estimators and finite-size scaling."
authors = [
    { name = "Zhengyi Lu" }
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "black",
]
test = [
    "pytest",
]

[tool.hatch.build.targets.wheel]
packages = ["src/xy3d_wolff"]
